--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,3 +1,9 @@
 {
-    "eslint.autoFixOnSave": true
+    "eslint.autoFixOnSave": true,
+    "eslint.filetypes": [
+      "javascript",
+      "javascriptreact",
+      "typescript",
+      "typescriptreact"
+    ]
 }
