tmux config and removed alacritty in favour of kitty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,10 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible' 
- 
+
+set-window-option -g automatic-rename off
+set-window-option -g status-interval 5
+
 # bind tmux to ` instead of C-b
 unbind C-b
 set-option -g prefix `
@@ -17,36 +20,49 @@ set -g base-index 1
 setw -g pane-base-index 1
 setw -g aggressive-resize on
 
-set -g window-style 'bg=default'
-set -g window-active-style 'bg=default'
-
-set -g status-bg default
-set -g window-status-activity-style bold
-set -g pane-border-style fg=colour245
-set -g pane-active-border-style fg=colour208
-set -g message-style fg=colour16,bg=colour221,bold
-
-set -g status-left-length 32
-set -g status-right-length 150
-set -g status-interval 5
-
-# set -g status-left '#[fg=colour229,bg=default,bold] #S #[fg=colour221,bg=default,nobold] ⧉ #[fg=colour238,bg=default,nobold]'
-# set -g status-right '#[fg=colour245]  %d %b %R#[fg=colour254,bg=colour0,nobold]'
-set -g status-left ''
-set -g status-right ''
-set -g window-status-format "#[fg=white,bg=default,nobold] #I:#W "
-set -g window-status-current-format "#[fg=black,bg=colour109,noreverse,bold] #I:#W #[fg=colour39,bg=default,nobold]"
-
-set -g status-justify centre
-set -g status-position top
-
-
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-
 setw -g monitor-activity on
 set -g visual-activity off
+
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+set -g @sysstat_cpu_view_tmpl '#[fg=cyan]C:#[default] #[fg=#{cpu.color}]#{cpu.pused}#[default]'
+set -g @sysstat_mem_view_tmpl '#[fg=blue]M:#[default] #[fg=#{mem.color}]#{mem.pused}#[default]'
+set -g status-interval 3
+
+# Task warrior integration
+set -g @plugin 'chriszarate/tmux-tasks'
+
+set -g @tasks_manager 'taskwarrior'
+set -g @tasks_icon_urgent "#[fg=brightcyan]  "
+set -g @tasks_icon_outstanding "#[fg=brightcyan]  "
+set -g @tasks_format_begin "#[fg=brightcyan, bg=default] #(task _get rc.context)"
+
+#---------------------------------------
+# Theme
+#---------------------------------------
+# Status line
+set -g status-style default
+set -g status-right-length 80
+set -g status-left-length 100
+set -g window-status-separator "" 
+set -g status-bg black
+
+# Bars ---------------------------------
+set -g status-left "#[fg=black,bg=#98c379,bold]  #S #[fg=#98c379,bg=black]"
+set -g status-right "#[fg=black,bg=brightblack]#[fg=brightwhite,bg=brightblack] %Y-%m-%d /%l:%M #[fg=#98c379,bg=brightblack]#[bg=#98c379,fg=black, bold]  #(whoami) "
+
+# Windows ------------------------------
+set -g status-position bottom
+set -g status-justify left 
+set -g window-status-format "#[fg=brightwhite] #I / #W "
+set -g window-status-current-format "#[fg=black,bg=brightblack]#[bg=brightblack,fg=white] #I / #{?window_zoomed_flag,#[fg=yellow] ,}#[fg=white]#W #[fg=brightblack,bg=black]"
+
+bind h resize-pane -L 5
+bind j resize-pane -D 5
+bind k resize-pane -U 5
+bind l resize-pane -R 5
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/git/jordy/dotfiles/tmux/plugins/tpm/tpm'
