--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,7 @@
 cursor_shape beam
 
 dynamic_background_opacity yes
+remember_window_size  yes
 
 # include ryze.conf
 
@@ -21,7 +22,7 @@ font_size 14.0
 disable_ligatures never
 
 term xterm-256color
-window_padding_width 0.8
+window_padding_width 0.0
 
 include ./snazzy.conf
 
@@ -29,5 +30,6 @@ editor nvim
 
 macos_show_window_title_in none
 macos_titlebar_color #282a36
+hide_window_decorations yes
 
 shell /usr/local/bin/fish --login --init-command 'tmux -u attach; tmux new -s main'
