--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -25,14 +25,17 @@ primary = #f19618
 secondary = #e60053
 alert = #ff3333
 
-[bar/example]
-;monitor = ${env:MONITOR:Virtual1}
+[bar/main]
+monitor = ${env:MONITOR:Virtual1}
 width = 100%:-36
 height = 48
 offset-x = 18
 offset-y = 18
 radius = 0
 fixed-center = true
+dpi = 163
+
+# bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -49,7 +52,49 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = SFMono Nerd Font:size=16;3
+font-0 = SFMono Nerd Font:size=12;3
+font-1 = @FONT_UNIFONT@:size=8:antialias=false;0
+font-2 = @FONT_SIJI@;1
+
+modules-left = bspwm
+modules-center = now-playing
+modules-right = filesystem cpu memory date
+
+tray-position = right
+tray-padding = 2
+tray-background = #0063ff
+
+wm-restack = bspwm
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/secondary]
+monitor = ${env:MONITOR:Virtual2}
+width = 100%:-36
+height = 48
+offset-x = 18
+offset-y = 18
+radius = 0
+fixed-center = true
+dpi = 163
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+line-color = #f00
+
+border-size = 0
+border-color = #00000000
+
+padding-left = 1
+padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 2
+
+font-0 = SFMono Nerd Font:size=12;3
 font-1 = @FONT_UNIFONT@:size=8:antialias=false;0
 font-2 = @FONT_SIJI@;1
 
@@ -90,13 +135,23 @@ label-unmounted-foreground = ${colors.foreground-alt}
 [module/bspwm]
 type = internal/bspwm
 
-ws-icon-0 = 1; 
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;%{F#1DB954}阮%{F-}
+fomat = <label-state> <label-mode>
 
+ws-icon-0 = 1; 
+ws-icon-1 = 2;
+ws-icon-2 = 3;甆
+ws-icon-3 = 4;%{F#1DB954}阮%{F-}
+ws-icon-4 = 5;
+ws-icon-default = 
+
+label-occupied = %icon%
+label-empty = %icon%
+label-urgent = %icon%
 label-default = %icon%
-label-monitor = %name%
+label-focused = %icon%
+label-visible = %icon%
+label-unfocused = %icon%
+label-monitor = %icon%
 
 label-focused-foreground = ${colors.primary}
 label-urgent-foreground = ${colors.alert}
