--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["json", "vim", "fish"],
+  "coc.preferences.formatOnSaveFiletypes": ["json", "vim", "fish", "prisma"],
   "eslint.enable": true,
   "eslint.autoFixOnSave": true,
   "eslint.filetypes": [
