--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -3,14 +3,14 @@ include-file=$DOTFILES/polybar/theme.ini
 [bar/main]
 monitor = ${env:MONITOR:Virtual1}
 width = 100%:-36
-height = 48
+height = 36
 offset-x = 18
 offset-y = 18
 radius = 0
 fixed-center = true
-dpi = 163
+dpi = ${env:DPI}
 
-# bottom = true
+bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -44,47 +44,47 @@ wm-restack = bspwm
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-[bar/secondary]
-monitor = ${env:MONITOR:Virtual2}
-width = 100%:-36
-height = 48
-offset-x = 18
-offset-y = 18
-radius = 0
-fixed-center = true
-dpi = 163
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3
-line-color = #f00
-
-border-size = 0
-border-color = #00000000
-
-padding-left = 1
-padding-right = 2
-
-module-margin-left = 1
-module-margin-right = 2
-
-font-0 = SFMono Nerd Font:size=12;3
-font-1 = @FONT_UNIFONT@:size=8:antialias=false;0
-font-2 = @FONT_SIJI@;1
-
-modules-left = bspwm
-modules-center = now-playing
-modules-right = filesystem cpu memory date
-
-tray-position = right
-tray-padding = 2
-tray-background = #0063ff
-
-wm-restack = bspwm
-
-cursor-click = pointer
-cursor-scroll = ns-resize
+# [bar/secondary]
+# monitor = ${env:MONITOR:Virtual2}
+# width = 100%:-36
+# height = 48
+# offset-x = 18
+# offset-y = 18
+# radius = 0
+# fixed-center = true
+# dpi = ${env:DPI}
+# 
+# background = ${colors.background}
+# foreground = ${colors.foreground}
+# 
+# line-size = 3
+# line-color = #f00
+# 
+# border-size = 0
+# border-color = #00000000
+# 
+# padding-left = 1
+# padding-right = 2
+# 
+# module-margin-left = 1
+# module-margin-right = 2
+# 
+# font-0 = SFMono Nerd Font:size=12;3
+# font-1 = @FONT_UNIFONT@:size=8:antialias=false;0
+# font-2 = @FONT_SIJI@;1
+# 
+# modules-left = bspwm
+# modules-center = now-playing
+# modules-right = filesystem cpu memory date
+# 
+# tray-position = right
+# tray-padding = 2
+# tray-background = #0063ff
+# 
+# wm-restack = bspwm
+# 
+# cursor-click = pointer
+# cursor-scroll = ns-resize
 
 [module/now-playing]
 type = custom/script
