--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -30,15 +30,11 @@
           Installing Brew packages from Brewfile,
       ]
     - 
-      description: "Adding fish to known shells"
-      command: "./setup_scripts/fish.sh"
+      description: "Setting up fish as default shell"
+      command: "./setup_scripts/fish_setup"
       stdout: true
       stdin: true
       stderr: true
-    - [
-          chsh -s $(which fish),
-          Making fish the default shell
-      ]
     - [
           rm -rf ~/.local/share/nvim/site/pack/packer && git clone --depth 1 https://github.com/wbthomason/packer.nvim ~/.local/share/nvim/site/pack/packer/start/packer.nvim,
           Installing Packer,
@@ -48,10 +44,10 @@
           Installing Neovim plugins,
       ]
     - [
-          fish setup_scripts/set_repeat_rate.fish,
+          ./setup_scripts/set_repeat_rate,
           Setting key repeat rate,
       ]
     - [
-          fish setup_scripts/add_ssh_key.fish,
+          fish setup_scripts/shh.fish,
           Setting up SSH,
       ]
