adds brew setup script

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,7 +24,7 @@
 
 - shell:
     - [
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)",
+          ./setup_scripts/brew
           Installing Brew,
       ]
     - [
