--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -4,8 +4,12 @@ import:
 
 font:
   normal:
-    family: SFMono Nerd Font
+    # family: SFMono Nerd Font
+    family: MesloLGL Nerd Font Mono
   size: 12
+  offset:
+    x: 0
+    y: 0
 
 live_config_reload: true
 cursor:
