--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,3 +10,4 @@ name: crkbd firmware build
 jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    working-directory: ./keyboards/crkbd
