--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,11 @@ on:
     paths:
       - keyboards/crkbd/**
 name: crkbd firmware build
+inputs: 
+  config_path: keyboards/crkbd
 jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    with:
+      build_matrix_path: keyboards/crkbd/build.yaml
+      config_path: keyboards/crkbd/config
