--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
-# on: [push, pull_request, workflow_dispatch]
 on:
+  workflow_dispatch:
   pull_request:
     paths:
       - keyboards/crkbd/**
@@ -12,4 +12,4 @@ jobs:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
     with:
       build_matrix_path: keyboards/crkbd/build.yaml
-      config_path: keyboards/crkbd/config
+      config_path: keyboards/crkbd/config/
