--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,67 +1,63 @@
-# Dev session with predefined layout:
-#   ------------
-#  |          |
-#  |----------|
-#  |    |     |
-#  ------------
-# tmux new-session \; split-window -v -p 20 \; split-window -h \;
+# set-option -g activity-action other
+# set-option -g assume-paste-time 1
+# set-option -g base-index 0
+# set-option -g bell-action any
+# set-option -g default-command ''
+# set-option -g default-shell /opt/homebrew/bin/fish
+# set-option -g default-size 80x24
+# set-option -g destroy-unattached off
+# set-option -g detach-on-destroy on
+# set-option -g display-panes-active-colour red
+# set-option -g display-panes-colour blue
+# set-option -g display-panes-time 1000
+# set-option -g display-time 750
+# set-option -g history-limit 2000
+# set-option -g key-table root
+# set-option -g lock-after-time 0
+# set-option -g lock-command "lock -np"
+# set-option -g message-command-style bg=black,fg=yellow
+# set-option -g message-style bg=yellow,fg=black
+set-option -g mouse on
+# set-option -g prefix C-b
+# set-option -g prefix2 None
+# set-option -g renumber-windows off
+# set-option -g repeat-time 500
+# set-option -g set-titles off
+# set-option -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
+# set-option -g silence-action other
+# set-option -g status off
+# set-option -g update-environment[0] DISPLAY
+# set-option -g update-environment[1] KRB5CCNAME
+# set-option -g update-environment[2] SSH_ASKPASS
+# set-option -g update-environment[3] SSH_AUTH_SOCK
+# set-option -g update-environment[4] SSH_AGENT_PID
+# set-option -g update-environment[5] SSH_CONNECTION
+# set-option -g update-environment[6] WINDOWID
+# set-option -g update-environment[7] XAUTHORITY
+# set-option -g visual-activity off
+# set-option -g visual-bell off
+# set-option -g visual-silence off
+# set-option -g word-separators " "
+#
+# set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "alacritty"
+set -ag terminal-overrides ",alacritty:RGB"
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+source-file $DOTFILES/tmux/catppuccin.conf
 
 bind s source-file $HOME/dotfiles/tmux/session1
 
-activity-action other
-assume-paste-time 1
-base-index 0
-bell-action any
-default-command ''
-default-shell /opt/homebrew/bin/fish
-default-size 80x24
-destroy-unattached off
-detach-on-destroy on
-display-panes-active-colour red
-display-panes-colour blue
-display-panes-time 1000
-display-time 750
-history-limit 2000
-key-table root
-lock-after-time 0
-lock-command "lock -np"
-message-command-style bg=black,fg=yellow
-message-style bg=yellow,fg=black
-mouse off
-prefix C-b
-prefix2 None
-renumber-windows off
-repeat-time 500
-set-titles off
-set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
-silence-action other
-status on
-status-bg default
-status-fg default
-status-format[0] "#[align=left range=left #{status-left-style}]#[push-default]#{T;=/#{status-left-length}:status-left}#[pop-default]#[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#[push-default]#{T:window-status-format}#[pop-default]#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{window-status-current-style},default},#{window-status-current-style},#{window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{status-right-style}]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
-status-format[1] "#[align=centre]#{P:#{?pane_active,#[reverse],}#{pane_index}[#{pane_width}x#{pane_height}]#[default] }"
-status-interval 15
-status-justify left
-status-keys emacs
-status-left "[#{session_name}] "
-status-left-length 10
-status-left-style default
-status-position bottom
-status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\" %H:%M %d-%b-%y"
-status-right-length 40
-status-right-style default
-status-style bg=green,fg=black
-update-environment[0] DISPLAY
-update-environment[1] KRB5CCNAME
-update-environment[2] SSH_ASKPASS
-update-environment[3] SSH_AUTH_SOCK
-update-environment[4] SSH_AGENT_PID
-update-environment[5] SSH_CONNECTION
-update-environment[6] WINDOWID
-update-environment[7] XAUTHORITY
-visual-activity off
-visual-bell off
-visual-silence off
-word-separators " "
+# # List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 
-source-file ./catppuccin.conf
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
