--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@
 # set-option -g base-index 0
 # set-option -g bell-action any
 # set-option -g default-command ''
-# set-option -g default-shell /opt/homebrew/bin/fish
+set-option -g default-shell /opt/homebrew/bin/fish
 # set-option -g default-size 80x24
 # set-option -g destroy-unattached off
 # set-option -g detach-on-destroy on
@@ -37,11 +37,9 @@ set-option -g mouse on
 # set-option -g visual-activity off
 # set-option -g visual-bell off
 # set-option -g visual-silence off
-# set-option -g word-separators " "
+set-option -g word-separators " "
 #
-# set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-# set -g default-terminal "screen-256color"
 set -g default-terminal "alacritty"
 set -ag terminal-overrides ",alacritty:RGB"
 
