[tmux]: add aliases and session config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,61 +1,71 @@
-# set-option -g activity-action other
-# set-option -g assume-paste-time 1
-# set-option -g base-index 0
-# set-option -g bell-action any
-# set-option -g default-command ''
+#https://polestarjira.atlassian.net/browse/PCOM-9525 Start tab with 1 instead of 0
+set-option -g base-index 1
+
 set-option -g default-shell /opt/homebrew/bin/fish
-# set-option -g default-size 80x24
-# set-option -g destroy-unattached off
-# set-option -g detach-on-destroy on
-# set-option -g display-panes-active-colour red
-# set-option -g display-panes-colour blue
-# set-option -g display-panes-time 1000
-# set-option -g display-time 750
-# set-option -g history-limit 2000
-# set-option -g key-table root
-# set-option -g lock-after-time 0
-# set-option -g lock-command "lock -np"
-# set-option -g message-command-style bg=black,fg=yellow
-# set-option -g message-style bg=yellow,fg=black
+
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
+# VIM Mode
+setw -g mode-keys vi
 set-option -g mouse on
-# set-option -g prefix C-b
-# set-option -g prefix2 None
-# set-option -g renumber-windows off
-# set-option -g repeat-time 500
-# set-option -g set-titles off
-# set-option -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
-# set-option -g silence-action other
-# set-option -g status off
-# set-option -g update-environment[0] DISPLAY
-# set-option -g update-environment[1] KRB5CCNAME
-# set-option -g update-environment[2] SSH_ASKPASS
-# set-option -g update-environment[3] SSH_AUTH_SOCK
-# set-option -g update-environment[4] SSH_AGENT_PID
-# set-option -g update-environment[5] SSH_CONNECTION
-# set-option -g update-environment[6] WINDOWID
-# set-option -g update-environment[7] XAUTHORITY
-# set-option -g visual-activity off
-# set-option -g visual-bell off
-# set-option -g visual-silence off
-set-option -g word-separators " "
-#
+# Notify on activity
+setw -g monitor-activity on
+
+
+### TERMINAL OVERRIDES ###
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -g default-terminal "alacritty"
 set -ag terminal-overrides ",alacritty:RGB"
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
+### THEME ###
 source-file $DOTFILES/tmux/catppuccin.conf
 
-bind s source-file $HOME/dotfiles/tmux/session1
+bind S source-file $DOTFILES/tmux/develop
+
+### NAVIGATION ###
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+### SLITTING PANES ###
+bind-key v split-window -h
+bind-key s split-window -v
+
+### RESIZING PANES ###
+# Alt + Arrow keys resize by 5
+bind -n M-Left resize-pane -L 5
+bind -n M-Down resize-pane -D 5 
+bind -n M-Up resize-pane -U 5
+bind -n M-Right resize-pane -R 5
+
+# Shift + Alt + Arrow keys resize by 5
+bind -n S-M-Left resize-pane -L 20
+bind -n S-M-Down resize-pane -D 20 
+bind -n S-M-Up resize-pane -U 20
+bind -n S-M-Right resize-pane -R 20
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+### Editing and sourcing TMUX conf
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key M split-window -h "v ~/.tmux.conf"
+
+setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 
 # # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'abhinav/tmux-fastcopy'
+# set -g @plugin 'ofirgall/tmux-window-name'
+set -g @plugin 'jaclu/tmux-power-zoom'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
