adopt tundra colorscheme and fix nvim-dashboard

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,4 @@
-#https://polestarjira.atlassian.net/browse/PCOM-9525 Start tab with 1 instead of 0
+# Start tab with 1 instead of 0
 set-option -g base-index 1
 
 set-option -g default-shell /opt/homebrew/bin/fish
@@ -20,7 +20,7 @@ set -g default-terminal "alacritty"
 set -ag terminal-overrides ",alacritty:RGB"
 
 ### THEME ###
-source-file $DOTFILES/tmux/catppuccin.conf
+source-file $DOTFILES/tmux/tundra.conf
 
 bind S source-file $DOTFILES/tmux/develop
 
