--- a/alacritty/colors.yml
+++ b/alacritty/colors.yml
@@ -1,4 +1,33 @@
 schemes:
+  tundra: &tundra
+    primary:
+      background: '0x111827'
+      foreground: '0xD1D5DB'
+
+    cursor:
+      text: '0x111827'
+      cursor: '0xD1D5DB'
+
+    normal:
+      black:   '0x6B7280'
+      red:     '0xFCA5A5'
+      green:   '0xB1E3AD'
+      yellow:  '0xFBC19D'
+      blue:    '0xBAE6FD'
+      magenta: '0x957FB8'
+      cyan:    '0xDDD6FE'
+      white:   '0xA5F3FC'
+
+    bright:
+      black:   '0x6B7280'
+      red:     '0xFCA5A5'
+      green:   '0xB1E3AD'
+      yellow:  '0xFBC19D'
+      blue:    '0xBAE6FD'
+      magenta: '0x938AA9'
+      cyan:    '0xDDD6FE'
+      white:   '0xA5F3FC'
+
   # Catppuccin!
   catppuccin: &catppuccin
     # Default colors
@@ -97,4 +126,4 @@ schemes:
       - { index: 16, color: '0xd18616' }
       - { index: 17, color: '0xcb2431' }
 
-colors: *catppuccin
+colors: *tundra
