--- a/.github/workflows/build-cornishzen.yml
+++ b/.github/workflows/build-cornishzen.yml
@@ -1,10 +1,10 @@
-on: [push, pull_request, workflow_dispatch]
-
 name: Corne-ish Zen ZMK Firmware Build
 
 on:
   workflow_dispatch:
   pull_request:
+    paths:
+      - keyboards/corneishzen
   push:
     paths:
       - keyboards/corneishzen
