--- a/.github/workflows/build-cornishzen.yml
+++ b/.github/workflows/build-cornishzen.yml
@@ -40,6 +40,8 @@ jobs:
         run: west update
       - name: West Zephyr export
         run: west zephyr-export
+      - name: List all files in GITHUB_WORKSPACE/keyboards/corneishzen
+        run: ls -al ${GITHUB_WORKSPACE}/keyboards/corneishzen
       - name: West Build (Corne-ish Zen Left)
         run: west build -s zmk/app -b corne-ish_zen_left -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/keyboards/corneishzen"
       - name: Corne-ish Zen DTS File
