--- a/.github/workflows/build-cornishzen.yml
+++ b/.github/workflows/build-cornishzen.yml
@@ -35,7 +35,7 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - name: West Init
-        run: west init -l config
+        run: west init -l keyboards/corneishzen/config
       - name: West Update
         run: west update
       - name: West Zephyr export
