--- a/.github/workflows/build-crkbd.yml
+++ b/.github/workflows/build-crkbd.yml
@@ -1,68 +1,29 @@
-name: CRKBD ZMK Firmware build
+name: Corne-ish Zen ZMK Firmware Build
 
 on:
   workflow_dispatch:
   pull_request:
     paths:
-      - keyboards/crkbd/**
+      - keyboards/crkbd
   push:
     paths:
-      - keyboards/crkbd/**
+      - keyboards/crkbd
 
 jobs:
-  matrix:
-    runs-on: ubuntu-latest
-    name: Fetch Build Keyboards
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Install yaml2json
-        run: python3 -m pip install remarshal
-
-      - id: set-matrix
-        name: Fetch Build Matrix
-        run: |
-          matrix=$(yaml2json ./keyboards/crkbd/build.yaml | jq -c .)
-          yaml2json ./keyboards/crkbd/build.yaml
-          echo "::set-output name=matrix::${matrix}"
-
   build:
     runs-on: ubuntu-latest
     container:
-      image: zmkfirmware/zmk-build-arm:stable
-    needs: matrix
+      image: zmkfirmware/zmk-build-arm:2.5
     name: Build
-    strategy:
-      fail-fast: false
-      matrix: ${{fromJson(needs.matrix.outputs.matrix)}}
     steps:
-      - name: Prepare variables
-        id: variables
-        run: |
-          if [ -n "${{ matrix.shield }}" ]; then
-            EXTRA_CMAKE_ARGS="-DSHIELD=${{ matrix.shield }}"
-            ARTIFACT_NAME="${{ matrix.shield }}-${{ matrix.board }}-zmk"
-            DISPLAY_NAME="${{ matrix.shield }} - ${{ matrix.board }}"
-          else
-            EXTRA_CMAKE_ARGS=
-            DISPLAY_NAME="${{ matrix.board }}"
-            ARTIFACT_NAME="${{ matrix.board }}-zmk"
-          fi
-          echo ::set-output name=extra-cmake-args::${EXTRA_CMAKE_ARGS}
-          echo ::set-output name=artifact-name::${ARTIFACT_NAME}
-          echo ::set-output name=display-name::${DISPLAY_NAME}
-          echo ::set-output name=zephyr-version::${ZEPHYR_VERSION}
-
       - name: Checkout
         uses: actions/checkout@v2
-
+      - name: Create work folder
+        run: cp -a ${GITHUB_WORKSPACE}/keyboards/crkbd config
       - name: Cache west modules
-        uses: actions/cache@v3.0.1
+        uses: actions/cache@v2
         env:
-          cache-name: cache-zephyr-${{ steps.variables.outputs.zephyr-version }}-modules
+          cache-name: cache-zephyr-modules
         with:
           path: |
             modules/
@@ -70,41 +31,39 @@ jobs:
             zephyr/
             bootloader/
             zmk/
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('keyboards/crkbd/config/west.yml', 'keyboards/ckrbd/build.yaml') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('manifest-dir/west.yml') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-
       - name: West Init
-        run: west init -l ./keyboards/crkbd/config
-
+        run: west init -l config
       - name: West Update
-        run: west update ${GITHUB_WORKSPACE}/keyboards/crkbd/config
-
+        run: west update
       - name: West Zephyr export
         run: west zephyr-export
-
-      - name: West Build (${{ steps.variables.outputs.display-name }})
-        run: |
-          west build -s zmk/app -b ${{ matrix.board }} -- -DZMK_CONFIG=${GITHUB_WORKSPACE}/keyboards/crkbd/config ${{ steps.variables.outputs.extra-cmake-args }} ${{ matrix.cmake-args }}
-
-      - name: ${{ steps.variables.outputs.display-name }} Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$" | sort
-
-      - name: Rename artifacts
-        run: |
-          mkdir build/artifacts
-          if [ -f build/zephyr/zmk.uf2 ]
-          then
-            cp build/zephyr/zmk.uf2 "build/artifacts/${{ steps.variables.outputs.artifact-name }}.uf2"
-          elif [ -f build/zephyr/zmk.${{ inputs.fallback_binary }} ]
-          then
-            cp build/zephyr/zmk.bin "build/artifacts/${{ steps.variables.outputs.artifact-name }}.bin"
-          fi
-
-      - name: Archive (${{ steps.variables.outputs.display-name }})
+      - name: West Build (CRKBD Left)
+        run: west build -s zmk/app -b crkbd_left -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: CRKBD DTS File
+        if: ${{ always() }}
+        run: cat -n build/zephyr/crkbd_left.dts.pre.tmp
+      - name: CRKBD Left Kconfig file
+        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
+      - name: Rename zmk.uf2
+        run: cp build/zephyr/zmk.uf2 crkbd_left.uf2
+      - name: Archive CRKBD
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: build/artifacts
+          path: crkbd_left.uf2
+      - name: West Build (CRKBD Right)
+        run: west build --pristine -s zmk/app -b crkbd_right -- -DZMK_CONFIG="${GITHUB_WORKSPACE}/keyboards/corneishzen"
+      - name: CRKBD Right Kconfig file
+        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
+      - name: Rename zmk.uf2
+        run: cp build/zephyr/zmk.uf2 crkbd_right.uf2
+      - name: Archive (CRKBD Right)
+        uses: actions/upload-artifact@v2
+        with:
+          name: firmware
+          path: crkbd_right.uf2
