--- a/keyboards/zmk/build.yaml
+++ b/keyboards/zmk/build.yaml
@@ -1,6 +1,6 @@
 include:
   - board: lpgalaxy_blank_slate
-  - board: nice_nano_v2
-    shield: corne_left
-  - board: nice_nano_v2
-    shield: corne_right
+  # - board: nice_nano_v2
+  #   shield: corne_left
+  # - board: nice_nano_v2
+  #   shield: corne_right
