--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -1,3 +1,4 @@
+name: Build QMK firmware
 on:
   workflow_dispatch:
   push:
@@ -6,20 +7,40 @@ on:
 
 jobs:
   build:
-    name: Build QMK Keyboard Firmware
     runs-on: ubuntu-latest
+    container: ghcr.io/qmk/qmk_cli
+    strategy:
+      fail-fast: false
+      matrix:
+        file:
+        - keyboards/qmk/cornelius
+
     steps:
-      - uses: actions/checkout@v1
 
-      - name: Build Firmware
-        uses: ./
-        with:
-          keymap-path: "keyboards/qmk/keychron_q2"
-          keyboard: "keychron/q2/ansi_encoder"
-          keymap: "q2"
+    - name: Disable git safe directory checks
+      run : git config --global --add safe.directory '*'
 
-      - name: Upload a Firmware
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: firmware
-          path: build
+    - name: Checkout QMK
+      uses: actions/checkout@v3
+      with:
+        repository: qmk/qmk_firmware
+        submodules: recursive
+
+    - name: Checkout userspace
+      uses: actions/checkout@v3
+      with:
+        path: users/${{ github.actor }}
+
+    - name: Build firmware
+      run: qmk compile -kb $(basename "${{ matrix.file }}") -km default -j 4
+      working-directory: users/${{ github.actor }}/
+
+    - name: Archive firmware
+      uses: actions/upload-artifact@v3
+      continue-on-error: true
+      with:
+        name: ${{ matrix.file }}_${{ github.actor }}
+        path: |
+          *.hex
+          *.bin
+          *.uf2
