--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         file:
-        - keyboards/qmk/cornelius
+        - cornelius/rev2
 
     steps:
 
@@ -32,11 +32,9 @@ jobs:
         path: users/${{ github.actor }}
 
     - name: Build firmware
-      run: |
-        KB=$(echo "${{ matrix.file }}" | sed 's|keyboards/||')
-        qmk compile -kb "$KB" -km default -j 4
+      run: qmk compile -kb "${{ matrix.file }}" -km default -j 4
       working-directory: users/${{ github.actor }}/
-
+    
     - name: Archive firmware
       uses: actions/upload-artifact@v4
       continue-on-error: true
