--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -39,8 +39,8 @@ jobs:
       working-directory: .
 
     - name: Build firmware
-      run: qmk compile -kb "cornelius/rev2" -km default
-      working-directory:  /qmk_firmware
+      run: make cornelius/rev2:default
+      working-directory: /qmk_firmware
     
     - name: Archive firmware
       uses: actions/upload-artifact@v4
