--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - keyboards/qmk/
+      - .github/workflows/build-qmk-firmware.yml
 
 jobs:
   build:
@@ -22,14 +23,10 @@ jobs:
 
     - name: Checkout userspace
       uses: actions/checkout@v3
-      with:
-        path: users/${{ github.actor }}
 
     - name: Copy user keyboard files into QMK
       run: |
-        mkdir -p /opt/qmk_firmware/keyboards/cornelius
-        cp -r users/${{ github.actor }}/keyboards/qmk/cornelius/* /opt/qmk_firmware/keyboards/cornelius/
-      working-directory: .
+        cp -a /dotfiles/keyboards/qmk/cornelius /opt/qmk_firmware/keyboards/cornelius
 
     - uses: d3adb5/build-qmk-fw@v1
       with:
