--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -27,6 +27,8 @@ jobs:
     - name: Copy user keyboard files into QMK
       run: |
         cp -a /dotfiles/keyboards/qmk/cornelius /opt/qmk_firmware/keyboards/cornelius
+        ls -la /opt/qmk_firmware/keyboards/cornelius
+
 
     - uses: d3adb5/build-qmk-fw@v1
       with:
