--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -22,12 +22,13 @@ jobs:
       run : git config --global --add safe.directory '*'
 
     - name: Checkout userspace
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Copy user keyboard files into QMK
       run: |
         ls -la /
-        cp -a /dotfiles/keyboards/qmk/cornelius /opt/qmk_firmware/keyboards/cornelius
+        // copy from the userspace to the qmk firmware
+        cp -a ${GITHUB_WORKSPACE}/dotfiles/keyboards/qmk/cornelius /opt/qmk_firmware/keyboards/cornelius
         ls -la /opt/qmk_firmware/keyboards/cornelius
 
 
