fix: ensure working directory is set for checkout action in QMK firmware build

--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -23,6 +23,7 @@ jobs:
 
     - name: Checkout userspace
       uses: actions/checkout@v4
+      working-directory: .
 
     - name: Copy user keyboard files into QMK
       run: |
