--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -23,13 +23,12 @@ jobs:
 
     - name: Checkout userspace
       uses: actions/checkout@v4
-      working-directory: .
       
 
     - name: Copy user keyboard files into QMK
       run: |
         ls -la /
-        cp -a /dotfiles/keyboards/qmk/cornelius /opt/qmk_firmware/keyboards/cornelius
+        cp -a $GITHUB_WORKSPACE/dotfiles/keyboards/qmk/cornelius /opt/qmk_firmware/keyboards/cornelius
         ls -la /opt/qmk_firmware/keyboards/corneliuk
 
 
