--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -28,8 +28,9 @@ jobs:
     - name: Copy user keyboard files into QMK
       run: |
         ls -la /
+        ls -la $GITHUB_WORKSPACE
         cp -a $GITHUB_WORKSPACE/keyboards/qmk/cornelius /opt/qmk_firmware/keyboards/cornelius
-        ls -la /opt/qmk_firmware/keyboards/corneliuk
+        ls -la /opt/qmk_firmware/keyboards
 
 
     - uses: d3adb5/build-qmk-fw@v1
