--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -24,21 +24,28 @@ jobs:
     - name: Checkout userspace
       uses: actions/checkout@v4
       
-
+    - name: Checkout QMK firmware
+      uses: actions/checkout@v4
+      with:
+        repository: qmk/qmk_firmware
+        submodules: recursive
+        path: qmk_firmware
+      
     - name: Copy user keyboard files into QMK
       run: |
-        ls -la /opt/qmk_firmware
-        ls -la /opt/qmk_firmware/keyboards
+        ls -la /qmk_firmware
+        ls -la /qmk_firmware/keyboards
         cp -a $GITHUB_WORKSPACE/keyboards/qmk/jornelius /opt/qmk_firmware/keyboards/jornelius
 
-    - uses: d3adb5/build-qmk-fw@v1
-      with:
-        keyboard: jornelius
-        keymap: default
-        output-dir: /keyboard-fimware
+    - name: Build firmware
+      run: |
+        cd /qmk_firmware
+        qmk compile -kb jornelius -km default
   
     - name: Archive firmware
       uses: actions/upload-artifact@v4
       with:
-        name: built-images
-        path: /keyboard-fimware
+        name: firmware-files
+        path: |
+          /qmk_firmware/.build/*.uf2
+          /qmk_firmware/.build/*.hex
