--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -38,6 +38,7 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE/qmk_firmware
         qmk compile -kb jornelius -km default
+        ls -al $GITHUB_WORKSPACE/qmk_firmware/.build
   
     - name: Archive firmware
       uses: actions/upload-artifact@v4
