fix: correct 'width' to 'with' in firmware archive step of QMK build workflow

--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -37,7 +37,7 @@ jobs:
   
     - name: Archive firmware
       uses: actions/upload-artifact@v4
-      width:
+      with:
         name: firmware-files
         path: |
           output/*.hex
