--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -33,8 +33,7 @@ jobs:
         mkdir output
         cd qmk_firmware
         qmk compile -kb jornelius -km default
-        ls -la .build
-        cp -a *.hex *.bin *.uf2 ../output/
+        cp -a .build/*.uf2 ../output/
   
     - name: Archive firmware
       uses: actions/upload-artifact@v4
