fix: update path matching for QMK firmware build triggers

--- a/.github/workflows/build-qmk-firmware.yml
+++ b/.github/workflows/build-qmk-firmware.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - keyboards/qmk/
+      - keyboards/qmk/*
       - .github/workflows/build-qmk-firmware.yml
 
 jobs:
